Standardize terms 'user' and 'node' as 'computer'.

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -741,8 +741,8 @@ nav_tree.node=Computer {0}
 nav_tree.onlinenodes=Verbundene Computer ({0})
 nav_tree.title=Navigation
 
-network_statistics_panel.connected_users=Verbundene Computer
-network_statistics_panel.known_users=Bekannte Computer
+network_statistics_panel.connected_computers=Verbundene Computer
+network_statistics_panel.known_computers=Bekannte Computer
 ##network_statistics_panel.local_folder_count=Number of local folders (joined)
 ##network_statistics_panel.local_folders_size=Total size of all local files
 ##network_statistics_panel.number_of_local_files=Total number of local files
@@ -1119,9 +1119,9 @@ select_invitation.text1=Einladungen werden benötigt um Zugriff zu erhalten
 select_invitation.text2=Senden Sie nie einem Unbekannten ein Einladung. 
 
 send_invitation.example_email_address=Email des Empfängers eingeben
-dialog.node_select.multi_users=Mehrere ausgew\u00e4hlt
-dialog.node_select.no_users=Keine Auswahl
-send_invitation.select_user.text=Auswählen
+dialog.node_select.multi_computers=Mehrere ausgew\u00e4hlt
+dialog.node_select.no_computers=Keine Auswahl
+send_invitation.select_computer.text=Auswählen
 
 ##send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
 ##send_invitation.allFolders.title={0} already on all folders
