--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -679,13 +679,13 @@ nav_tree.node=Node {0}
 nav_tree.onlinenodes=Connected Users ({0})
 nav_tree.title=Navigation
 
-network_statistics_panel.connected_users=Connected users
-network_statistics_panel.known_users=Known users
+network_statistics_panel.connected_computers=Connected users
+network_statistics_panel.known_computers=Known users
 network_statistics_panel.local_folder_count=Number of local folders (joined)
 network_statistics_panel.local_folders_size=Total size of all local files
 network_statistics_panel.number_of_local_files=Total number of local files
 network_statistics_panel.number_of_public_files=Total number of available files
-network_statistics_panel.online_users=Online users
+network_statistics_panel.online_computers=Online users
 network_statistics_panel.public_folder_count=Number of public folders (not joined)
 network_statistics_panel.public_folders_size=Total size of all available files
 network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
@@ -1011,9 +1011,9 @@ select_invitation.message_text=Enter a message for the receiver
 select_invitation.folder_text=Select folder to send invitation for
 
 send_invitation.example_email_address=email@domain.com
-dialog.node_select.multi_users=Multiple users selected
-dialog.node_select.no_users=No users selected
-send_invitation.select_user.text=Select user
+dialog.node_select.multi_computers=Multiple users selected
+dialog.node_select.no_computers=No users selected
+send_invitation.select_computer.text=Select user
 
 send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
 send_invitation.allFolders.title={0} already on all folders
