--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -673,13 +673,13 @@ nav_tree.node=Nodo {0}
 nav_tree.onlinenodes=Usuarios conectados ({0})
 nav_tree.title=Explorar
 
-network_statistics_panel.connected_users=Usuarios Conectados
-network_statistics_panel.known_users=Usuarios Conocidos
+network_statistics_panel.connected_computers=Usuarios Conectados
+network_statistics_panel.known_computers=Usuarios Conocidos
 network_statistics_panel.local_folder_count=N\u00FAmero de carpetas locales (adjuntas)
 network_statistics_panel.local_folders_size=Tama\u00F1o total de todos los archivos locales
 network_statistics_panel.number_of_local_files=N\u00FAmero total de archivos locales
 network_statistics_panel.number_of_public_files=N\u00FAmero total de archivos dispon\u00EDbles
-network_statistics_panel.online_users=Usuarios en l\u00EDnea
+network_statistics_panel.online_computers=Usuarios en l\u00EDnea
 network_statistics_panel.public_folder_count=Number of public folders (not joined)
 network_statistics_panel.public_folders_size=Tama\u00F1o total de todos los archivos dispon\u00EDbles
 network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
@@ -1054,9 +1054,9 @@ select_invitation.text1=Una invitaci\u00F3n es requisito para unirse a una carpe
 select_invitation.text2=Nunca mande archivos por invitacion a usuarios que no de confianza.
 
 send_invitation.example_email_address=email@dominio.com
-dialog.node_select.multi_users=Multiple selecci\u00F3n de usuarios
-dialog.node_select.no_users=Ning\u00FAn usuario ha sido seleccionado
-send_invitation.select_user.text=Selccionar usuario
+dialog.node_select.multi_computers=Multiple selecci\u00F3n de usuarios
+dialog.node_select.no_computers=Ning\u00FAn usuario ha sido seleccionado
+send_invitation.select_computer.text=Selccionar usuario
 
 send_invitation.allFolders.text=No fue posibible invitar a {0} a ninguna carpeta\nEste usuario ya es miembro de todas las carpetas
 send_invitation.allFolders.title={0} ya es miembro en todas las carpetas
