--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -676,13 +676,13 @@ nav_tree.node=Source {0}
 nav_tree.onlinenodes=Utilisateurs connect\u00E9s ({0})
 nav_tree.title=Navigation
 
-network_statistics_panel.connected_users=Utilisateurs connect\u00E9s
-network_statistics_panel.known_users=Utilisateurs connus
+network_statistics_panel.connected_computers=Utilisateurs connect\u00E9s
+network_statistics_panel.known_computers=Utilisateurs connus
 network_statistics_panel.local_folder_count=Nombre de dossiers locaux (connect\u00E9s)
 network_statistics_panel.local_folders_size=Taille totale de tous les fichiers locaux
 network_statistics_panel.number_of_local_files=Nombre total de fichiers locaux
 network_statistics_panel.number_of_public_files=Nombre total de fichiers disponibles
-network_statistics_panel.online_users=Utilisateurs connect\u00E9s
+network_statistics_panel.online_computers=Utilisateurs connect\u00E9s
 network_statistics_panel.public_folder_count=Nombre de dossiers publics (non connect\u00E9s)
 network_statistics_panel.public_folders_size=Taille totale de tous les dossiers disponibles
 network_statistics_panel.reconnection_queue_size=Noeud pr\u00E9ents dans la file d'attente de reconnexion
@@ -1057,9 +1057,9 @@ select_invitation.text1=Un fichier d'invitation est n\u00E9cessaire pour rejoind
 select_invitation.text2=Ne jamais envoyer d'invitation \u00E0 des personnes inconnues.
 
 send_invitation.example_email_address=indiqueradressedemessagerie@domaine.fr
-dialog.node_select.multi_users=S\u00E9lection de plusieurs utilisateurs
-dialog.node_select.no_users=Aucun utilisateur s\u00E9lectionn\u00E9
-send_invitation.select_user.text=Choisir l'utilisateur
+dialog.node_select.multi_computers=S\u00E9lection de plusieurs utilisateurs
+dialog.node_select.no_computers=Aucun utilisateur s\u00E9lectionn\u00E9
+send_invitation.select_computer.text=Choisir l'utilisateur
 
 send_invitation.allFolders.text=Impossible d'inviter {0} \u00E0 un dossier\nL'utilisateur fait d\u00E9j\u00E0 partie de tous vos dossiers
 send_invitation.allFolders.title={0} d\u00E9j\u00E0 pour tous vos dossiers
