--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -674,13 +674,13 @@ nav_tree.node=Nodo {0}
 nav_tree.onlinenodes=Utenti connessi ({0})
 nav_tree.title=Navigazione
 
-network_statistics_panel.connected_users=Utenti connessi
-network_statistics_panel.known_users=Utenti conosciuti
+network_statistics_panel.connected_computers=Utenti connessi
+network_statistics_panel.known_computers=Utenti conosciuti
 network_statistics_panel.local_folder_count=Numero di cartelle locali (joined)
 network_statistics_panel.local_folders_size=Dimensione totale di tutti i file locali
 network_statistics_panel.number_of_local_files=Numero totale di tutti i file locali
 network_statistics_panel.number_of_public_files=Numero totale di tutti i file disponibili
-network_statistics_panel.online_users=Utenti online
+network_statistics_panel.online_computers=Utenti online
 network_statistics_panel.public_folder_count=Numero di cartelle pubbliche (not joined)
 network_statistics_panel.public_folders_size=Dimensione totale di tutti i file disponibili
 network_statistics_panel.reconnection_queue_size=Nodi nella coda di riconnessione
@@ -1055,9 +1055,9 @@ select_invitation.text1=E' necessario avere un file di invito per condividere un
 select_invitation.text2=Non inviare files di invito a persone sconosciute.
 
 send_invitation.example_email_address=email@domain.com
-dialog.node_select.multi_users=Utenti multipli selezionati
-dialog.node_select.no_users=Nessun utente selezionato
-send_invitation.select_user.text=Seleziona utente
+dialog.node_select.multi_computers=Utenti multipli selezionati
+dialog.node_select.no_computers=Nessun utente selezionato
+send_invitation.select_computer.text=Seleziona utente
 
 send_invitation.allFolders.text=Impossibile invitare {0} in una cartella\nL'utente partecipa gi\u00E0 a tutte le tue cartelle
 send_invitation.allFolders.title={0} gi\u00E0 su tutte le cartelle
