--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -674,13 +674,13 @@ nav_tree.node=Gebruiker {0}
 nav_tree.onlinenodes=Verbonden gebruikers ({0})
 nav_tree.title=Navigatie
 
-network_statistics_panel.connected_users=Verbonden gebruikers
-network_statistics_panel.known_users=Bekende gebruikers
+network_statistics_panel.connected_computers=Verbonden gebruikers
+network_statistics_panel.known_computers=Bekende gebruikers
 network_statistics_panel.local_folder_count=Aantal lokale folders (lid)
 network_statistics_panel.local_folders_size=Totale omvang van alle lokale bestanden
 network_statistics_panel.number_of_local_files=Totaal aantal lokale bestanden
 network_statistics_panel.number_of_public_files=Totaal aantal beschikbare bestanden
-network_statistics_panel.online_users=Verbonden gebruikers
+network_statistics_panel.online_computers=Verbonden gebruikers
 network_statistics_panel.public_folder_count=Aantal publieke folders (niet lid)
 network_statistics_panel.public_folders_size=Totale omvang van alle beschikbare bestanden
 ##network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
