--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -674,13 +674,13 @@ nav_tree.node=W\u0119ze\u0142 {0}
 nav_tree.onlinenodes=Po\u0142\u0105czeni U\u017cytkownicy ({0})
 nav_tree.title=Nawigacja
 
-network_statistics_panel.connected_users=Po\u0142\u0105czeni u\u017cytkownicy
-network_statistics_panel.known_users=Rozpoznani u\u017cytkownicy
+network_statistics_panel.connected_computers=Po\u0142\u0105czeni u\u017cytkownicy
+network_statistics_panel.known_computers=Rozpoznani u\u017cytkownicy
 network_statistics_panel.local_folder_count=Liczba lokalnych folder\u00f3w (przy\u0142\u0105czonych)
 network_statistics_panel.local_folders_size=Ca\u0142kowity rozmiar wszystkich lokalnych plik\u00f3w
 network_statistics_panel.number_of_local_files=Liczba wszystkich lokalnych plik\u00f3w
 network_statistics_panel.number_of_public_files=Liczba wszystkich dost\u0119pnych plik\u00f3w
-network_statistics_panel.online_users=U\u017cytkownicy online
+network_statistics_panel.online_computers=U\u017cytkownicy online
 network_statistics_panel.public_folder_count=Liczba publicznych folder\u00f3w (nie przy\u0142\u0105czonych)
 network_statistics_panel.public_folders_size=Ca\u0142kowity rozmiar dost\u0119pnych plik\u00f3w
 network_statistics_panel.reconnection_queue_size=W\u0119z\u0142y w kolejce do ponownego po\u0142\u0105czenia
@@ -1055,8 +1055,8 @@ scan_folder.name=Synchronizuj teraz
 ##select_invitation.text2=Never give out invitation files to untrusted people.
 
 send_invitation.example_email_address=email@domena.com
-dialog.node_select.multi_users=Zaznaczono kilku u\u017cytkownik\u00f3w
-dialog.node_select.no_users=Nie zaznaczono u\u017cytkownika
+dialog.node_select.multi_computers=Zaznaczono kilku u\u017cytkownik\u00f3w
+dialog.node_select.no_computers=Nie zaznaczono u\u017cytkownika
 ##send_invitation.select_user.text=Select user
 
 ##send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
