--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -602,13 +602,13 @@ nav_tree.node=N\u00f3 {0}
 nav_tree.onlinenodes=Usu\u00e1rios conectados ({0})
 nav_tree.title=Navega\u00e7\u00e3o
 
-network_statistics_panel.connected_users=Usu\u00e1rios conectados
-network_statistics_panel.known_users=Usu\u00e1rios conhecidos
+network_statistics_panel.connected_computers=Usu\u00e1rios conectados
+network_statistics_panel.known_computers=Usu\u00e1rios conhecidos
 network_statistics_panel.local_folder_count=N\u00famero de pastas locais (Number of local folders (associado)
 network_statistics_panel.local_folders_size=Tamanho total dos arquivos locais
 network_statistics_panel.number_of_local_files=N\u00famero total dos arquivos locais
 network_statistics_panel.number_of_public_files=N\u00famero total de arquivos dispon\u00edveis
-network_statistics_panel.online_users=Usu\u00e1rios online
+network_statistics_panel.online_computers=Usu\u00e1rios online
 network_statistics_panel.public_folder_count=N\u00famero de pastas p\u00fablicas (n\u00e3o associadas)
 network_statistics_panel.public_folders_size=Tamanho total de todos os arquivos dispon\u00edveis
 network_statistics_panel.reconnection_queue_size=N\u00f3s na fila de reconex\u00e3o
@@ -933,9 +933,9 @@ send_invitation.example_emailaddress=email@domain.com
 send_invitation.folder.text=Enviar convite para
 send_invitation.folder.title=Enviar convite
 send_invitation.key=i
-dialog.node_select.multi_users=V\u00e1rios usu\u00e1rios selecionados
+dialog.node_select.multi_computers=V\u00e1rios usu\u00e1rios selecionados
 send_invitation.name=Enviar convite
-dialog.node_select.no_users=Nenhum usu\u00e1rio selecionado
+dialog.node_select.no_computers=Nenhum usu\u00e1rio selecionado
 send_invitation.placetostore=Escolha um lugar para armazenar o convite
 send_invitation.subject=Convite para a pasta PowerFolder '{0}'
 send_invitation.toclipboard=Para \u00e1rea de transfer\u00eancia...
@@ -1129,7 +1129,7 @@ send_invitation.example_email_address=email@domain.com
 wizard.send_invitations.save_to_file=Salve em arquivo
 wizard.send_invitations.over_powerfolder=Envie pelo PowerFolder agora
 wizard.setup_folder.title=Crie uma pasta
-dialog.node_select.no_users=
+dialog.node_select.no_computers=
 
 wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
 wizard.setup_dns.enter_dns=Digite seu dns (din\u00e2mico)
