--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -674,13 +674,13 @@ nav_tree.node=Nod {0}
 nav_tree.onlinenodes=Anslutna anv\u00e4ndare ({0})
 nav_tree.title=Navigering
 
-network_statistics_panel.connected_users=Anslutna anv\u00e4ndare
-network_statistics_panel.known_users=K\u00e4nda anv\u00e4ndare
+network_statistics_panel.connected_computers=Anslutna anv\u00e4ndare
+network_statistics_panel.known_computers=K\u00e4nda anv\u00e4ndare
 network_statistics_panel.local_folder_count=Antal lokala foldrar (du \u00e4r med i)
 network_statistics_panel.local_folders_size=Total storlek av alla lokala filer
 network_statistics_panel.number_of_local_files=Totalt antal lokala filer
 network_statistics_panel.number_of_public_files=Totalt antal tillg\u00e4ngliga filer
-network_statistics_panel.online_users=Anv\u00e4ndare nline
+network_statistics_panel.online_computers=Anv\u00e4ndare nline
 network_statistics_panel.public_folder_count=Antal offentliga foldrar (du ej \u00e4r med i)
 network_statistics_panel.public_folders_size=Total storlek av alla tillg\u00e4ngliga filer
 ##network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
