--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -673,13 +673,13 @@ nav_tree.node=\u7528\u6237 {0}
 nav_tree.onlinenodes=\u8fde\u63a5\u7684\u7528\u6237 ({0})
 nav_tree.title=\u5bfc\u822a
 
-network_statistics_panel.connected_users=\u8fde\u63a5\u7684\u7528\u6237
-network_statistics_panel.known_users=\u5df2\u77e5\u7528\u6237
+network_statistics_panel.connected_computers=\u8fde\u63a5\u7684\u7528\u6237
+network_statistics_panel.known_computers=\u5df2\u77e5\u7528\u6237
 network_statistics_panel.local_folder_count=\u672c\u5730\u6587\u4ef6\u5939\uff08\u52a0\u5165\u7684\uff09\u603b\u6570
 network_statistics_panel.local_folders_size=\u672c\u5730\u6587\u4ef6\u603b\u5927\u5c0f
 network_statistics_panel.number_of_local_files=\u672c\u5730\u6587\u4ef6\u603b\u6570
 network_statistics_panel.number_of_public_files=\u6709\u6548\u6587\u4ef6\u603b\u6570
-network_statistics_panel.online_users=\u5728\u7ebf\u7528\u6237
+network_statistics_panel.online_computers=\u5728\u7ebf\u7528\u6237
 network_statistics_panel.public_folder_count=\u516c\u5f00\u6587\u4ef6\u5939\uff08\u672a\u52a0\u5165\u7684\uff09\u603b\u6570
 network_statistics_panel.public_folders_size=\u6709\u6548\u6587\u4ef6\u603b\u5927\u5c0f
 network_statistics_panel.reconnection_queue_size=\u8282\u70b9\u5728\u91cd\u65b0\u8fde\u63a5\u961f\u5217\u4e2d
@@ -1054,9 +1054,9 @@ select_invitation.text1=\u52a0\u5165\u6587\u4ef6\u5939\u9700\u8981\u9080\u8bf7\u
 select_invitation.text2=\u4ece\u4e0d\u53d1\u653e\u9080\u8bf7\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba
 
 send_invitation.example_email_address=email@domain.com
-dialog.node_select.multi_users=\u9009\u62e9\u591a\u4e2a\u7528\u6237
-dialog.node_select.no_users=\u6ca1\u6709\u9009\u62e9\u7528\u6237
-send_invitation.select_user.text=\u9009\u62e9\u7528\u6237
+dialog.node_select.multi_computers=\u9009\u62e9\u591a\u4e2a\u7528\u6237
+dialog.node_select.no_computers=\u6ca1\u6709\u9009\u62e9\u7528\u6237
+send_invitation.select_computer.text=\u9009\u62e9\u7528\u6237
 
 send_invitation.allFolders.text=\u4e0d\u80fd\u9080\u8bf7 {0} \u52a0\u5165\u4efb\u4f55\u6587\u4ef6\u5939\n\u8be5\u7528\u6237\u5df2\u7ecf\u52a0\u5165\u4f60\u7684\u6240\u6709\u6587\u4ef6\u5939
 send_invitation.allFolders.title={0} \u5df2\u7ecf\u52a0\u5165\u6240\u6709\u6587\u4ef6\u5939
