--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -674,13 +674,13 @@ nav_tree.node=\u0625\u0631\u062a\u0628\u0627\u0637 {0}
 nav_tree.onlinenodes=\u0627\u0644\u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0645\u062a\u0635\u0644\u0648\u0646 ({0})
 nav_tree.title=\u0625\u0628\u062d\u0627\u0631
 
-network_statistics_panel.connected_users=\u0627\u0644\u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0645\u062a\u0635\u0644\u0648\u0646
-network_statistics_panel.known_users=\u0627\u0644\u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0645\u0639\u0631\u0648\u0641\u0648\u0646
+network_statistics_panel.connected_computers=\u0627\u0644\u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0645\u062a\u0635\u0644\u0648\u0646
+network_statistics_panel.known_computers=\u0627\u0644\u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0645\u0639\u0631\u0648\u0641\u0648\u0646
 network_statistics_panel.local_folder_count=\u0639\u062f\u062f \u0627\u0644\u0645\u062c\u0644\u062f\u0627\u062a \u0627\u0644\u0645\u062d\u0644\u064a\u0629  (\u0645\u062c\u062a\u0645\u0639\u0629)
 network_statistics_panel.local_folders_size=\u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0625\u062c\u0645\u0627\u0644\u064a \u0644\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062d\u0644\u064a\u0629
 network_statistics_panel.number_of_local_files=\u0627\u0644\u0639\u062f\u062f \u0627\u0644\u0625\u062c\u0645\u0627\u0644\u064a \u0644\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062d\u0644\u064a\u0629
 network_statistics_panel.number_of_public_files=\u0627\u0644\u0639\u062f\u062f \u0627\u0644\u0625\u062c\u0645\u0627\u0644\u064a \u0644\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u0648\u062c\u0648\u062f\u0629
-network_statistics_panel.online_users=\u0627\u0644\u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0645\u062a\u0635\u0644\u0648\u0646 network_statistics_panel.public_folder_count\=\u0639\u062f\u062f \u0627\u0644\u0645\u062c\u0644\u062f\u0627\u062a \u0627\u0644\u0639\u0627\u0645\u0629  (\u063a\u064a\u0631 \u0645\u062c\u0645\u0648\u0639\u0629 )
+network_statistics_panel.online_computers=\u0627\u0644\u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0645\u062a\u0635\u0644\u0648\u0646 network_statistics_panel.public_folder_count\=\u0639\u062f\u062f \u0627\u0644\u0645\u062c\u0644\u062f\u0627\u062a \u0627\u0644\u0639\u0627\u0645\u0629  (\u063a\u064a\u0631 \u0645\u062c\u0645\u0648\u0639\u0629 )
 ##network_statistics_panel.public_folder_count=Number of public folders (not joined)
 network_statistics_panel.public_folders_size=\u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0625\u062c\u0645\u0627\u0644\u064a \u0644\u062c\u0645\u064a\u0639 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062a\u0648\u0641\u0631\u0629
 network_statistics_panel.reconnection_queue_size=\u0627\u0644\u0625\u0631\u062a\u0628\u0627\u0637 \u0641\u064a \u0635\u0646\u062f\u0648\u0642 \u0625\u0639\u0627\u062f\u0629 \u0627\u0644\u0625\u062a\u0635\u0627\u0644
@@ -1055,8 +1055,8 @@ scan_folder.name=\u0645\u0632\u0627\u0645\u0646\u0629 \u0627\u0644\u0627\u0646
 ##select_invitation.text2=Never give out invitation files to untrusted people.
 
 send_invitation.example_email_address=email@domain.com
-dialog.node_select.multi_users=\u062a\u0645 \u0627\u062e\u062a\u064a\u0627\u0631 \u0623\u0639\u0636\u0627\u0621 \u0645\u062a\u0639\u062f\u062f\u064a\u0646
-dialog.node_select.no_users=\u0644\u0645 \u064a\u062a\u0645 \u0625\u062e\u062a\u064a\u0627\u0631 \u0623\u0639\u0636\u0627\u0621
+dialog.node_select.multi_computers=\u062a\u0645 \u0627\u062e\u062a\u064a\u0627\u0631 \u0623\u0639\u0636\u0627\u0621 \u0645\u062a\u0639\u062f\u062f\u064a\u0646
+dialog.node_select.no_computers=\u0644\u0645 \u064a\u062a\u0645 \u0625\u062e\u062a\u064a\u0627\u0631 \u0623\u0639\u0636\u0627\u0621
 ##send_invitation.select_user.text=Select user
 
 ##send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
