--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -671,13 +671,13 @@ nav_tree.node=\u30CE\u30FC\u30C9 {0}
 nav_tree.onlinenodes=\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC ({0})
 nav_tree.title=\u64CD\u4F5C
 
-network_statistics_panel.connected_users=\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC
-network_statistics_panel.known_users=\u65E2\u77E5\u30E6\u30FC\u30B6\u30FC
+network_statistics_panel.connected_computers=\u63A5\u7D9A\u30E6\u30FC\u30B6\u30FC
+network_statistics_panel.known_computers=\u65E2\u77E5\u30E6\u30FC\u30B6\u30FC
 network_statistics_panel.local_folder_count=\u30ED\u30FC\u30AB\u30EB\u30D5\u30A9\u30EB\u30C0\u6570\uFF08\u53C2\u52A0\uFF09
 network_statistics_panel.local_folders_size=\u5168\u30ED\u30FC\u30AB\u30EB\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u30B5\u30A4\u30BA
 network_statistics_panel.number_of_local_files=\u30ED\u30FC\u30AB\u30EB\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u6570
 network_statistics_panel.number_of_public_files=\u53D6\u5F97\u53EF\u80FD\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u6570
-network_statistics_panel.online_users=\u30AA\u30F3\u30E9\u30A4\u30F3\u30E6\u30FC\u30B6\u30FC
+network_statistics_panel.online_computers=\u30AA\u30F3\u30E9\u30A4\u30F3\u30E6\u30FC\u30B6\u30FC
 network_statistics_panel.public_folder_count=\u30D1\u30D6\u30EA\u30C3\u30AF\u30D5\u30A9\u30EB\u30C0\u6570\uFF08\u975E\u53C2\u52A0\uFF09
 network_statistics_panel.public_folders_size=\u53D6\u5F97\u53EF\u80FD\u5168\u30D5\u30A1\u30A4\u30EB\u5408\u8A08\u30B5\u30A4\u30BA
 network_statistics_panel.reconnection_queue_size=\u518D\u63A5\u7D9A\u9806\u756A\u5F85\u3061\u30CE\u30FC\u30C9\u6570
@@ -1052,9 +1052,9 @@ select_invitation.text1=\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3059\u308B\u
 select_invitation.text2=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u306F\u4FE1\u7528\u3067\u304D\u306A\u3044\u4EBA\u306B\u6C7A\u3057\u3066\u6E21\u3055\u306A\u3044\u3067\u304F\u3060\u3055\u3044\u3002
 
 send_invitation.example_email_address=email@domain.com
-dialog.node_select.multi_users=\u8907\u6570\u9078\u629E\u30E6\u30FC\u30B6\u30FC
-dialog.node_select.no_users=\u9078\u629E\u30E6\u30FC\u30B6\u30FC\u306A\u3057
-send_invitation.select_user.text=\u30E6\u30FC\u30B6\u30FC\u9078\u629E
+dialog.node_select.multi_computers=\u8907\u6570\u9078\u629E\u30E6\u30FC\u30B6\u30FC
+dialog.node_select.no_computers=\u9078\u629E\u30E6\u30FC\u30B6\u30FC\u306A\u3057
+send_invitation.select_computer.text=\u30E6\u30FC\u30B6\u30FC\u9078\u629E
 
 send_invitation.allFolders.text={0} \u306F\u3069\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u3082\u53C2\u52A0\u3055\u305B\u308B\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093\u3002\n\u30E6\u30FC\u30B6\u30FC\u306F\u3042\u306A\u305F\u306E\u5168\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u6E08\u307F\u3067\u3059\u3002
 send_invitation.allFolders.title={0} \u306F\u3059\u3067\u306B\u5168\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0
