--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -25,7 +25,7 @@ general.search=Suchen
 general.close=Schliessen
 general.close.key=S
 
-wizard.send_invitations.send_by_mail.cc_me=Einladung auch an mich senden (CC)
+wizard.send_invitations.send_by_mail.cc_me=Einladung auch an meine Email senden
 pro.wizard.activation.valid_from=Gültig ab
 pro.wizard.activation.valid_to=Gültig bis
 
@@ -65,9 +65,10 @@ preferences.dialog.show_system_notifications=Popups für Systemmeldungen anzeigen
 pro.wizard.activation.already_account=Ich bin bereits registriert
 
 pro.wizard.activation.password_confirm=Passwort bestätigen
-pro.wizard.activation.password_length=Password muss mindesten 6 Zeichen lang sein.
-
-pro.wizard.activation.register_why=Warum muss Ich mich registrieren?
+pro.wizard.activation.password_length=Gültige Email und Password mit mindesten 6 Zeichen benötigt
+pro.wizard.activation.no_key_info_1=Bitte mit bestehendem Zugangskonto anmelden
+pro.wizard.activation.no_key_info_2=um PowerFolder Pro nutzen zu können.
+pro.wizard.activation.register_why=Warum benötige Ich ein Zugangskonto?
 pro.wizard.activation.subscribe_newsletter=Newsletter abonnieren
 
 quickinfo.webservice.folders_mirrored={0} von {1} PowerFolder werden online gesichert. {2} Online Speicher benutzt.
@@ -995,8 +996,8 @@ pro.wizard.activation.please_purchase=Bitte erwerben Sie PowerFolder Pro um fort
 pro.wizard.activation.pro_activation=PowerFolder Pro Aktivierung
 pro.wizard.activation.recover_password=Passwort vergessen
 pro.wizard.activation.register_now=Jetzt anmelden
-pro.wizard.activation.register_now_trial_1=Kostenlos anmelden und für 30 Tage 
-pro.wizard.activation.register_now_trial_2=PowerFolder Pro testen.
+pro.wizard.activation.register_now_trial_1=Jetzt kostenloses Zugangskonto erstellen oder mit einem 
+pro.wizard.activation.register_now_trial_2=Bestehenden anmelden um PowerFolder Pro nutzen zu können.
 pro.wizard.activation.successful=Aktivierung erfolgreich
 pro.wizard.activation.thanks_activation=Vielen Dank, dass Sie PowerFolder Pro aktiviert haben.
 pro.wizard.activation.thanks_additional=Vielen Dank, dass Sie zusätzliche\nPowerFolder Pro Lizenzen erworben haben.
@@ -1146,8 +1147,8 @@ set_master_node.key=a
 set_master_node.name=Administrator w\u00e4hlen
 
 setup.description=Erstellt ein neuen oder tritt existierendem PowerFolder bei
-setup.key=s
-setup.name=Setup
+setup.key=n
+setup.name=Neu
 
 show_preview.description=Vorschau-Folder werden in der Liste angezeigt
 show_preview.key=V
