--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1302,10 +1302,10 @@ wizard.basic_setup.private=LAN und Internet
 wizard.basic_setup.title=Basis Setup
 wizard.basic_setup.upload.text=Unbegrenzte Bandbreite kann zu einer hohe Auslastung der Internet Verbindung f\u00fchren.
 wizard.basic_setup.upload.title=Unbegrenzte Bandbreite
-choose_disk_location_panel.select=Verzeichnis ausw\u00e4hlen
-choose_disk_location_panel.calculating_directory_size=Berechne Größe des Verzeichnis...
-choose_disk_location_panel.directory_size=Verzeichnis Größe {0}
-choose_disk_location_panel.select=Verzeichnisauswahl
+wizard.choose_disk_location.select=Verzeichnis ausw\u00e4hlen
+wizard.choose_disk_location.calculating_directory_size=Berechne Größe des Verzeichnis...
+wizard.choose_disk_location.directory_size=Verzeichnis Größe {0}
+wizard.choose_disk_location.select=Verzeichnisauswahl
 wizard.choose_disk_location.title=Festplatten Speicherort
 wizard.control.back=Zur\u00fcck
 wizard.control.back.description=Zum vorherigen Schritt
@@ -1351,8 +1351,7 @@ wizard.send_invitations.offline=Nicht verbunden
 wizard.send_invitations.send_success=Einladung versendet
 wizard.send_invitations.send_success_info=Die Einladung wurde erfolgreich versendet.
 wizard.setup_folder.send_invitation=Anschlie\u00dfend Einladungen versenden
-wizard.setup_folder.title=Erweitertes Setup
-wizard.setup_folder.transfer_mode=Transfer Modus
+wizard.folder_setup.transfer_mode=Transfer Modus
 wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
 wizard.setup_dns.enter_dns=Bitte geben Sie Ihre (dynamische) Internetadresse an
 wizard.setup_dns.improves_read=<html>Eine (dynamische) Internetadresse (Dynamic DNS) verbessert Ihre<br>Erreichbarkeit. Unbedingt ben\u00f6tigt wird sie aber nicht.</html>
