--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1236,10 +1236,10 @@ wizard.basic_setup.private=LAN e Internet
 wizard.basic_setup.title=Configuraci\u00F3n B\u00E1sica
 wizard.basic_setup.upload.text=Velocidad de conneci\u00F3n ilimitada permitir\u00E1 un n\u00FAmero ilimitado de conecciones.
 wizard.basic_setup.upload.title=Velocidad de Conecci\u00F3n ilimitada
-choose_disk_location_panel.select=Favor de seleccionar un directorio
-choose_disk_location_panel.calculating_directory_size=Calculando el tama\u00F1oo del directorio...
-choose_disk_location_panel.directory_size=Tama\u00F1oo de directiorio {0}
-choose_disk_location_panel.select=Seleccione el directorio
+wizard.choose_disk_location.select=Favor de seleccionar un directorio
+wizard.choose_disk_location.calculating_directory_size=Calculando el tama\u00F1oo del directorio...
+wizard.choose_disk_location.directory_size=Tama\u00F1oo de directiorio {0}
+wizard.choose_disk_location.select=Seleccione el directorio
 wizard.choose_disk_location.title=Ubicaci\u00F3n en el disco
 wizard.control.back=Atr\u00E1s
 wizard.control.back.description=Ir al paso previo del Asistente
@@ -1285,8 +1285,7 @@ wizard.send_invitations.offline=No conectado
 wizard.send_invitations.send_success=Invitaci\u00F3n enviada
 wizard.send_invitations.send_success_info=La invitaci\u00F3n se envi\u00F3 con exito.
 wizard.setup_folder.send_invitation=Mandar invitaciones despu\u00E9s
-wizard.setup_folder.title=Crear Carpeta
-wizard.setup_folder.transfer_mode=Modo en transferencia
+wizard.folder_setup.transfer_mode=Modo en transferencia
 wizard.setup_dns.dyn_dns_home_page=P\u00E1gina web Dyndns
 wizard.setup_dns.enter_dns=Teclee su dns (din\u00E1mica)
 wizard.setup_dns.improves_read=Esto mejora su localizaci\u00F3n en la red. Aunque no es necesario
