--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1237,10 +1237,10 @@ wizard.basic_setup.private=LAN e Internet
 wizard.basic_setup.title=Impostazioni di base
 wizard.basic_setup.upload.text=La velocit\u00E0 illimitata di connessione consentir\u00E0 un numero di connessioni illimitate.
 wizard.basic_setup.upload.title=Velocit\u00E0 di connessione illimitata
-choose_disk_location_panel.select=Selezionare la directory
-choose_disk_location_panel.calculating_directory_size=Sto calcolando la dimensione della directory...
-choose_disk_location_panel.directory_size=La dimensione della directory \u00E8 {0}
-choose_disk_location_panel.select=Scegli la directory
+wizard.choose_disk_location.select=Selezionare la directory
+wizard.choose_disk_location.calculating_directory_size=Sto calcolando la dimensione della directory...
+wizard.choose_disk_location.directory_size=La dimensione della directory \u00E8 {0}
+wizard.choose_disk_location.select=Scegli la directory
 wizard.choose_disk_location.title=Percorso su disco
 wizard.control.back=Precedente
 wizard.control.back.description=Torna al passo precedente del wizard
@@ -1286,8 +1286,7 @@ wizard.send_invitations.offline=Non connesso
 wizard.send_invitations.send_success=Invito spedito
 wizard.send_invitations.send_success_info=L'invito \u00E8 stato mandato con successo.
 wizard.setup_folder.send_invitation=Manda un invito pi\u00F9 tardi
-wizard.setup_folder.title=Crea caratella
-wizard.setup_folder.transfer_mode=Trasferimento
+wizard.folder_setup.transfer_mode=Trasferimento
 wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
 wizard.setup_dns.enter_dns=Inserisci il tuo dns (dinamico)
 wizard.setup_dns.improves_read=Aumenta la tua raggiungibilit\u00E0. In ogni caso non \u00E8 necessario.
