--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1074,9 +1074,9 @@ wizard.basic_setup.private=Rede Local e Internet
 wizard.basic_setup.title=Configura\u00e7\u00e3o b\u00e1sica
 wizard.basic_setup.upload.text=Velocidade ilimitada de conex\u00e3o permite um n\u00famero ilimitado de conex\u00f5es.
 wizard.basic_setup.upload.title=Velocidade ilimitada de conex\u00e3o
-choose_disk_location_panel.select=Selecione diret\u00f3rio
+wizard.choose_disk_location.select=Selecione diret\u00f3rio
 wizard.choose_disk_location.title=Localiza\u00e7\u00e3o do disco
-choose_disk_location_panel.select=Por favor selecione o diret\u00f3rio
+wizard.choose_disk_location.select=Por favor selecione o diret\u00f3rio
 wizard.control.back=Voltar
 wizard.control.back.description=Voltar para o passo anterior
 wizard.control.cancel=Cancelar
@@ -1128,7 +1128,6 @@ wizard.send_invitations.send_by_mail=Envie por email
 send_invitation.example_email_address=email@domain.com
 wizard.send_invitations.save_to_file=Salve em arquivo
 wizard.send_invitations.over_powerfolder=Envie pelo PowerFolder agora
-wizard.setup_folder.title=Crie uma pasta
 dialog.node_select.no_computers=
 
 wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
