--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1236,10 +1236,10 @@ wizard.basic_setup.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
 wizard.basic_setup.title=\u57fa\u672c\u8bbe\u7f6e
 wizard.basic_setup.upload.text=\u65e0\u9650\u5236\u8fde\u63a5\u5c06\u5141\u8bb8\u65e0\u9650\u91cf\u7684\u8fde\u63a5\u6570\u3002
 wizard.basic_setup.upload.title=\u65e0\u9650\u5236\u8fde\u63a5
-choose_disk_location_panel.select=\u8bf7\u9009\u62e9\u76ee\u5f55
-choose_disk_location_panel.calculating_directory_size=\u6b63\u5728\u8ba1\u7b97\u76ee\u5f55\u5927\u5c0f...
-choose_disk_location_panel.directory_size=\u76ee\u5f55\u5927\u5c0f {0}
-choose_disk_location_panel.select=\u9009\u62e9\u76ee\u5f55
+wizard.choose_disk_location.select=\u8bf7\u9009\u62e9\u76ee\u5f55
+wizard.choose_disk_location.calculating_directory_size=\u6b63\u5728\u8ba1\u7b97\u76ee\u5f55\u5927\u5c0f...
+wizard.choose_disk_location.directory_size=\u76ee\u5f55\u5927\u5c0f {0}
+wizard.choose_disk_location.select=\u9009\u62e9\u76ee\u5f55
 wizard.choose_disk_location.title=\u78c1\u76d8\u4f4d\u7f6e
 wizard.control.back=\u8fd4\u56de
 wizard.control.back.description=\u5230\u5411\u5bfc\u7684\u4e0a\u4e00\u6b65
@@ -1285,8 +1285,7 @@ wizard.send_invitations.offline=\u672a\u8fde\u63a5
 wizard.send_invitations.send_success=\u9080\u8bf7\u53d1\u9001\u6210\u529f
 wizard.send_invitations.send_success_info=\u60a8\u5df2\u7ecf\u6210\u529f\u53d1\u9001\u9080\u8bf7\u3002
 wizard.setup_folder.send_invitation=\u7a0d\u5019\u53d1\u9001\u9080\u8bf7
-wizard.setup_folder.title=\u521b\u5efa\u6587\u4ef6\u5939
-wizard.setup_folder.transfer_mode=\u4f20\u8f93\u6a21\u5f0f
+wizard.folder_setup.transfer_mode=\u4f20\u8f93\u6a21\u5f0f
 wizard.setup_dns.dyn_dns_home_page=\u52a8\u6001DNS\u4e3b\u9875
 wizard.setup_dns.enter_dns=\u8f93\u5165\u4f60\u7684\u52a8\u6001DNS
 wizard.setup_dns.improves_read=\u8fd9\u4f1a\u6539\u5584\u4f60\u7684\u8fde\u63a5\u6027\u80fd\u3002\u4f46\u5e76\u4e0d\u662f\u5fc5\u9700\u7684\u3002
