--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1234,10 +1234,10 @@ wizard.basic_setup.private=LAN \u3068\u30A4\u30F3\u30BF\u30FC\u30CD\u30C3\u30C8
 wizard.basic_setup.title=\u57FA\u672C\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7
 wizard.basic_setup.upload.text=\u63A5\u7D9A\u901F\u5EA6\u3092\u7121\u5236\u9650\u306B\u3057\u305F\u5834\u5408\u3001\u63A5\u7D9A\u6570\u306E\u5236\u9650\u3082\u306A\u304F\u306A\u308A\u307E\u3059\u3002
 wizard.basic_setup.upload.title=\u7121\u5236\u9650\u306E\u63A5\u7D9A\u901F\u5EA6
-choose_disk_location_panel.select=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
-choose_disk_location_panel.calculating_directory_size=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u30B5\u30A4\u30BA\u3092\u8A08\u7B97\u3057\u3066\u3044\u307E\u3059...
-choose_disk_location_panel.directory_size=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u30FB\u30B5\u30A4\u30BA {0}
-choose_disk_location_panel.select=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u9078\u629E
+wizard.choose_disk_location.select=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
+wizard.choose_disk_location.calculating_directory_size=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u30B5\u30A4\u30BA\u3092\u8A08\u7B97\u3057\u3066\u3044\u307E\u3059...
+wizard.choose_disk_location.directory_size=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u30FB\u30B5\u30A4\u30BA {0}
+wizard.choose_disk_location.select=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u9078\u629E
 wizard.choose_disk_location.title=\u30C7\u30A3\u30B9\u30AF\u5185\u306E\u5834\u6240
 wizard.control.back=\u623B\u308B
 wizard.control.back.description=\u524D\u306E\u6BB5\u968E\u306B\u623B\u308B
@@ -1283,8 +1283,7 @@ wizard.send_invitations.offline=\u672A\u63A5\u7D9A
 wizard.send_invitations.send_success=\u62DB\u5F85\u72B6\u306E\u9001\u4ED8\u5B8C\u4E86
 wizard.send_invitations.send_success_info=\u62DB\u5F85\u72B6\u306E\u9001\u4ED8\u306B\u6210\u529F\u3057\u307E\u3057\u305F\u3002
 wizard.setup_folder.send_invitation=\u5F8C\u3067\u62DB\u5F85\u72B6\u3092\u9001\u4ED8
-wizard.setup_folder.title=\u30D5\u30A9\u30EB\u30C0\u306E\u4F5C\u6210
-wizard.setup_folder.transfer_mode=\u8EE2\u9001\u30E2\u30FC\u30C9
+wizard.folder_setup.transfer_mode=\u8EE2\u9001\u30E2\u30FC\u30C9
 wizard.setup_dns.dyn_dns_home_page=DynDns \u30DB\u30FC\u30E0\u30DA\u30FC\u30B8
 wizard.setup_dns.enter_dns=\u3042\u306A\u305F\u306E\uFF08\u52D5\u7684\uFF09DNS \u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 wizard.setup_dns.improves_read=\u5FC5\u9808\u5165\u529B\u9805\u76EE\u3067\u306F\u3042\u308A\u307E\u305B\u3093\u304C\u3001\u5916\u90E8\u304B\u3089\u306E\u53C2\u7167\u6027\u304C\u5411\u4E0A\u3057\u307E\u3059\u3002
